# GamePlatform

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FileSystem/: fileSystem.cpp
FileSystem/Headers/: fileSystem.h
GameRenderer/: gameRenderer.cpp
GameRenderer/Headers/: gameRenderer.h
JoystickDriver/: joystickDriver.cpp
JoystickDriver/Headers/: joystickDriver.h
MainScreen/: gameLoader.cpp  gameReader.cpp  main.cpp  mainScreen.cpp  selectionRect.cpp  tiles.cpp  topBar.cpp
MainScreen/Headers/: gameLoader.h  gameReader.h  mainScreen.h  selectionRect.h  tiles.h  topBar.h
SingleWindowLibrary/: core.cpp  rect.cpp  scene.cpp  texture.cpp
SingleWindowLibrary/Headers/: settings.h  swl.h
dlls/: what-to-do.txt
